hadoop-doc: add trino doc